# L3_S6

./: README.md
BigData/TP1/: main.ipynb
Compilation2/: E1_a.l  a.out  lex.yy.c
Genie_Logiciel/TD1/: pom.xml
Genie_Logiciel/TD1/src/main/java/org/main/: Calculator.java
Genie_Logiciel/TD1/src/test/: CalculatorTest.java
Genie_Logiciel/TP1_TD1/: pom.xml
Genie_Logiciel/TP1_TD1/src/main/java/: BerlinUhr.java  CalculatricePolonaise.java  FizzBuzz.java
Genie_Logiciel/TP1_TD1/src/test/java/: BerlinUhrTest.java  CalculatricePolonaiseTest.java  FizzBuzzTest.java
Genie_Logiciel/demo/src/main/java/com/: main.java
Genie_Logiciel/demo/src/main/java/com/example/: FizzBuzz.java
Genie_Logiciel/demo/src/test/java/com/example/: FizzBuzzTest.java
interoperabilite/: test.txt
interoperabilite/TP1ClientJavaProject/: lisezmoi.txt  pom.xml
interoperabilite/TP1ClientJavaProject/src/: FileWatcher.java  Main.java
interoperabilite/TP1ServerCPPProject/: CMakeLists.txt  premake5.lua
interoperabilite/TP1ServerCPPProject/src/efsw/: main.cpp
